update header, implement bootstrap, angular material,...

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/core": "~9.1.4",
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.1.4",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.4",
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
+    "bootstrap": "^4.5.0",
     "lodash": "^4.17.15",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
